Декоративные элементы. Сырой вариант

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html {
 body {
 	margin: 0;
 	padding: 0;
+	min-width: 1200xp;
 
 	font-family: Roboto, Arial, sans-serif;
 	font-size: 16px;
@@ -13,19 +14,48 @@ body {
 	color: #000000;
 
 	background-color: #ffffff;
-}
+} 
 
 a {
 	text-decoration: none;
 }
 
 img {
-	max-width: 100%; 
+	max-width: 100%;
+	height: auto;
 }
 
 *::before, *::after {
 	box-sizing: inherit;
 }
+
+.visually-hidden:not(:focus):not(active)
+input [type="checkbox"].visually-hidden,
+input [type="radio"].visually-hidden {
+	position: absolute;
+}
+
+
+
+/*--------------- Кнопка ---------------*/
+.button {
+	display: inline-block;
+	margin-right: 16px;
+	padding: 17px 40px;
+
+	font-size: 16px;
+	line-height: 18px;
+	text-align: center;
+	font-weight: normal;
+	color: #ffffff;
+	vertical-align: center;
+	text-transform: uppercase;
+	border-radius: 2px;
+
+	background-color: #fb565a;
+	border: none;
+}
+
 
 /*--------------- Главная навигация-СТИЛИ ---------------*/
 .main-header {
@@ -35,6 +65,7 @@ img {
 .main-navigation {
 	font-size: 16px;
 	line-height: 30px;
+	font-weight: bold;
 	text-transform: uppercase;
 	color: #000000;
 }
@@ -82,20 +113,24 @@ img {
 	text-decoration: none;
 	font-size: 16px;
 	line-height: 18px;
-	color: #ffffff;
+	color: #ffffff
 	text-transform: uppercase;
 	background-color: #fb565a;
 }
 
 .sliders-list a:hover,
-.sliders-list a:focus {
+.sliders-list a:focus,
+.basket-link a:focus,
+.basket-link a:hover {
 	color: white;
 	background-color: #e74246;
 }
 
-.sliders-list a:active {
-	background-color: #d7373b
+.sliders-list a:active,
+.basket-link a:active {
+	background-color: #d7373b;
 }
+
 
 
 /*--------------- Услуги-СТИЛИ ---------------*/
@@ -107,6 +142,7 @@ img {
 	font-size: 24px;
 	line-height: 30px;
 	font-weight: bold;
+	text-transform: uppercase;
 }
 
 .services-list a {
@@ -218,6 +254,33 @@ img {
 .partners-list a:active {
 	opacity: 0.1;
 }
+
+
+
+.partners-item {
+	position: relative;
+}
+
+.partners-item::before {
+	content: "";
+
+	position: absolute;
+	top: 25px;
+	left: 0px;
+
+	width: 2px;
+	height: 52px;
+
+	background-color: #d1d1d1;
+	filter: opacity(1);
+}
+
+.partners-item:nth-child(1)::before {
+	display: none;
+}
+
+
+
 
 /*--------------- Футер-СТИЛИ ---------------*/
 .contacts h4 {
@@ -496,7 +559,6 @@ img {
 	width: 1200px;
 	margin: 0 auto;
 	padding: 0;
-	outline: 3px solid green;
 }
 
 .main-header-logo {
@@ -504,29 +566,59 @@ img {
 	height: 65px;
 	margin: 0;
 	padding: 0;
-	outline: 3px solid yellow;
+	padding-top: 49px;
+	padding-bottom: 18px;
 }
 
 .site-navigation {
 	display: flex;
+	flex-wrap: wrap;
 	margin: 0;
 	padding: 0;
-	outline: 3px solid orange;
 }
 
 .site-navigation li {
 	padding: 0 30px;
+	padding-top: 83px;
 }
 
-.basket-link,
-.basket-link a {
+.basket-link {
+	display: flex;
+	max-width: 130px;
 	margin: 0;
-	padding: 0; 
-	outline: 3px solid black;
+	padding: 0;
+	padding-top: 83px;
 }
+
+.basket-link .basket {
+	position: relative;
+	padding-left: 45px;
+}
+
+.basket::before {
+	content: "";
+
+	position: absolute;
+	top: 1px;
+	left: 20px;
+
+	width: 16px;
+	height: 16px;
+
+	background-image: url("../img/cart-icon.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
+
 
 
 /*---------------Сетка для слайдера---------------*/
+.sliders {
+	margin: 0;
+	margin-bottom: 80px;
+	padding: 0;
+}
+
 .sliders-list {
 	display: fle; /*чтобы не было каши */
 	width: 1200px;
@@ -561,64 +653,112 @@ img {
 .services-list {
 	display: flex;
 	width: 1200px;
-
 	margin: 0 auto;
 	padding: 0;
-	outline: 3px solid red;
+	border-bottom: 2px solid #e1e1e1;
+
 }
 
 .service-item {
 	width: 33%;
 	margin: 0;
+	margin-right: 100px;
+	margin-bottom: 80px;
 	padding: 0;
-	padding-right: 100px;
+	border: 3px solid purple;
+}
+
+.service-item h3 {
+	margin: 0;
+	padding: 26px 0;
 }
 
 .service-item p {
 	width: 245px;
+	margin: 0;
+	padding: 0;
+	padding-bottom: 35px;
 }
-
 
 
 /*---------------Сетка для описания---------------*/
 .about-colums {
 	display: flex;
+	justify-content: space-between;
 	width: 1200px;
 	margin: 0 auto;
 	padding: 0;
+	border-bottom: 2px solid #e1e1e1;
 }
 
 .about {
-	width: 66.6666%;
-	margin: 0;
+	width: 58.3333%;
+	margin: 80px 0 75px 0;
 	padding: 0;
 	outline: 3px solid orange;
 }
 
-.block2004 {
-	width: 33.3333%;
+.slogan2 {
+	margin: 0;
+	padding: 38px 0 48px 0;
+}
+
+.about h4 {
 	margin: 0;
 	padding: 0;
+	padding-bottom: 35px;	
+}
+
+.orders li {
+	margin: 0;
+	padding: 0;
+	padding-bottom: 35px;
+}
+
+.orders li:nth-child(3) {
+	margin: 0;
+	padding: 0;
+}
+
+.block2004 {
+	width: 33.3333%;
+	margin: 40px 0 75px 0;
+	padding: 0;
 	outline: 3px solid blue;
+}
+
+.block2004 h4 {
+	text-align: center;
+	margin: 0;
+	padding: 41px 0 45px 0;
 }
 
 .block2004 .statistics {
 	display: flex;
 	margin: 0;
 	padding: 0;
-} 
+}
+
+.tagging {
+	display: block;
+	margin: 0;
+	padding: 0;	
+	padding-top: 28px;
+}
 
 
 /*---------------Сетка для партнеров---------------*/
 .partners-section {
 	width: 1200px;
 	margin: 0 auto;
+	margin-bottom: 80px;
 	padding: 0;
- 	outline: 3px solid purple;
+	outline: 3px solid red;
 }
 
 .partners-list {
 	display: flex;
+	align-items: center;
 	width: 1200px;
 	margin: 0;
 	padding: 0;
@@ -637,47 +777,89 @@ img {
 	width: 1200px; /*Тут мы задали ширину блока */
 	margin: 0 auto;
 	padding: 0;
- 	outline: 3px solid red;
 }
+
+.map { 
+	margin-left: -500px;
+	margin-right: -500px;
+	text-align: center;
+	outline: 3px solid red;
+}
+
+.contacts {
+	position: absolute;
+	width: 230px;
+	height: 308px;
+	margin-top: -400px;
+	padding-left: 50px; 
+	padding-right: 40px;
+	background-color: #ffffff;
+}
+
+.contacts h4 {
+	margin: 50px 0 30px 0;
+	padding: 0;
+}
+
+.contacts p:last-of-type {
+	margin: 0;
+	padding: 10px 0 35px 0;
+}
+
+.button-letter {
+	margin: 0;
+	padding: 0;
+	width: 219px;
+	height: 50px;
+	text-align: center;
+	vertical-align: center; /* не работает!? */
+}
+
 
 .footer-colums {
 	display: flex;
 	width: 1200px;  /*надо ли тут ширину дублировать!? */
-	margin: 0;
+	margin: 69px 0 0 0;
 	padding: 0;
-}
-
-.contacts {
-	display: block;
-	outline: 3px solid yellow;
-}
-
-.footer-social {
-	width: 34%;
-	margin: 0;
-	padding: 0;
-	outline: 3px solid purple;
+	outline: 3px solid blue;	
 }
 
 .social-type {
 	display: flex;
-	margin: 0;
+	justify-content: space-between;
+	width: 260px;
+	margin: 0px 140px 0 0;
 	padding: 0;
-	outline: 3px solid black;
+	list-style: none;
 }
+
+.button-social {
+	display: flex;
+	justify-content: center;
+	align-self: center;
+
+	width: 80px;
+	height: 80px;
+	border-radius: 100px;
+	background-color: #e1e1e1;
+}
+
 
 .footer-discount {
 	width: 66%;
 	margin: 0;
 	padding: 0;
-	outline: 3px solid blue;
 }
 
-.footer-discount b,p {
+.footer-discount b {
+	display: block;
+	padding: 9px 0 15px 0;
+}
+
+.footer-discount p {
 	margin: 0;
 	padding: 0;
 }
-
 
 
 /*Каталог*/
