--- a/css/style.css
+++ b/css/style.css
@@ -367,12 +367,13 @@ input [type="radio"].visually-hidden {
 
 
 
-/*--------------- КАТАЛОГ-СТИЛИ ---------------*/
-.filters ul {
-	list-style: none;
-}
+/*--------------- Каталог-СТИЛИ ---------------*/
 
 .page-title {
+	width: 1200px;
+	margin: 0 auto;
+	padding: 0;
+	padding-bottom: 116px;
 	font-size: 55px;
 	line-height: 55px;
 
@@ -382,63 +383,314 @@ input [type="radio"].visually-hidden {
 
 
 /*--------------- Фильтры-СТИЛИ ---------------*/
-.filter fieldset {
+.filters {
+	width: 300px;
+	padding: 0;
+	margin: 0 120px 0 0;
+}
+
+
+/*--------------- Фильтры-Стоимость-СТИЛИ ---------------*/
+.filter-item-cost {
+	margin: 60px 0 60px 0;
+	padding: 0;
+
 	border: none;
 }
 
-.filter legend {	
+.range-filter {
+	width: 260px;
+	margin-top: 49px;
+}
+
+.filter-item-cost legend {
 	font-size: 18px;
 	line-height: 30px;
+	text-transform: uppercase;
 	font-weight: bold;
+}
 
+.range-controls {
+	height: 41px;
+	margin-bottom: 15px;
+	padding-top: 39px;
+	padding-right: 20px;
+	padding-left: 20px;
+
+	background-color: #f1f1f1;
+  
+	border-radius: 5px;
+}
+
+.range-controls .scale {
+	height: 2px;
+
+	background: #d7dcde;
+}
+
+.range-controls .bar {
+	width: 70%;
+	height: 2px;
+
+	background: #00ca74;
+}
+
+.range-controls {
+	position: relative;
+}
+
+.range-controls .toggle {
+	position: absolute;
+	top: 31px;
+	left: 0;
+	width: 4px;
+	height: 4px;
+	padding: 0;
+
+	border: 8px solid #ffffff;
+	background-color: #ababab;
+	box-shadow: 0 2px 1px 0 #cfcfcf; 	
+	border-radius: 100%;
+	cursor: pointer;
+}
+
+.range-controls .toggle-min {
+	left: 18px;
+}
+
+.range-controls .toggle-max {
+	left: 160px;
+}
+
+.price-controls {
+	font-size: 0;
+}
+
+.price-controls label {
+	display: inline-block;
+	width: 50%;
+
+	font-size: 16px;
 	text-transform: uppercase;
 }
 
-.filter {
-	list-style: none;
+.price-controls input {
+	width: 60px;
+	padding: 8px 10px;
+	margin-left: 10px;
 
+	font-family: Roboto, Arial, sans-serif;
 	font-size: 16px;
-	line-height: 20px;
+	text-align: center;
 	color: #283136;
+
+	border: none;
+	border-radius: 3px;
+	background-color: #f1f1f1;
 }
 
+.max-price {
+	text-align: right;
+}
+
+
+
+/*--------------- Фильтр-Сетка-СТИЛИ ---------------*/
+.filter-item-grid {
+	margin: 0 0 50px 0;
+	padding: 0;
+	border: none;
+}
+
+.filter-item-grid legend {
+	margin: 0 0 20px 0;
+	padding: 0;
+	font-size: 18px;
+	line-height: 30px;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+.filter-item-grid ul {
+	font-size: 16px;
+	line-height: 20px;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	color: #dfdfdf;
+}
+
+.option-grid {
+	margin-bottom: 15px;
+	padding-left: 35px; 
+}
+
+.option-grid label {
+	position: relative;
+	display: block;
+	cursor: pointer;
+	user-select: none;
+}
+
+.filter-input-radio + label::before {
+	content: "";
+
+	position: absolute;
+	left: -35px;
+	top: -2px;
+
+	width: 27px;
+	height: 27px;
+
+	background-image: url("../img/radio-off.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	color: #dfdfdf;
+	opacity: 0.4;
+}
+
+.filter-input-radio:checked + label::after {
+	content: "";
+
+	position: absolute;
+	left: -35px;
+	top: -2px;
+
+	width: 27px;
+	height: 27px;
+
+	background-image: url("../img/radio-on.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	color: #dfdfdf;
+	opacity: 0.4;
+}
+
+
+
+/*--------------- Фильтр-Особенности-СТИЛИ ---------------*/
+.filter-item-features {
+	margin: 0 0 30px 0;
+	padding: 0;
+	border: none;
+}
+
+.filter-item-features legend {
+	margin: 0 0 20px 0;
+	padding: 0;
+	font-size: 18px;
+	line-height: 30px;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+.filter-item-features ul {
+	font-size: 16px;
+	line-height: 20px;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	color: #dfdfdf;
+}
+
+.option-features {
+	margin-bottom: 18px;
+	padding-left: 35px; 
+}
+
+.option-features label {
+	position: relative;
+	display: block;
+	cursor: pointer;
+	user-select: none;
+}
+
+.filter-input-checkbox + label::before {
+	content: "";
+
+	position: absolute;
+	left: -35px;
+	top: -2px;
+
+	width: 27px;
+	height: 27px;
+
+	background-image: url("../img/checkbox-off.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	opacity: 0.4;
+}
+
+.filter-input-checkbox:checked + label::after {
+	content: "";
+
+	position: absolute;
+	left: -35px;
+	top: -2px;
+
+	width: 27px;
+	height: 27px;
+
+	background-image: url("../img/checkbox-on.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	opacity: 0.4;
+}
+
+
+/*--------------- Фильтр-Кнопка-СТИЛИ ---------------*/
+.filter-button {
+	display: inline-block;
+	width: 260px;
+	height: 50px;
+	margin-right: 0;
+	padding: 0;
+
+	font-size: 16px;
+	line-height: 18px;
+	text-align: center;
+	font-weight: bold;
+	color: #000000;
+	vertical-align: center;
+	text-transform: uppercase;
+	border-radius: 2px;
+
+	background-color: #eeeeee;
+	border: none;
+}
+
+
+/*--------------- Эффекты-псевдоэлементов-Каталог ---------------*/
 .filter-input:hover + label, 
 .filter-input:focus + label {
 	color: #000000;
+	opacity: 1; /* не работает маркер */
 }
 
-.filter-input:disabled + label {
-	color: #283136;
-
+.filter-input:active + label { 
+	color: #000000;
 	opacity: 0.3;
 }
 
-.cost-section {
-	font-size: 16px;
-	line-height: 22px;
+
+
+.filter-button:hover,
+.filter-button:focus {
+	background-color: #dfdfdf
 }
 
-.cost-section label {
-	font-size: 16px;
-	line-height: 22px;
+.filter-button:active {
+	color: rgba(0, 0, 0, 0.3);
+	background-color: #d5d5d5;
 }
 
-.filter button {
-	font-size: 16px;
-	line-height: 18px;
-	color: #000000;
-	height: 50px;
-	width: 260px;
-	background-color: #eeeeee;
-}
+
+
+
 /*---------------Сортировка-СТИЛИ ---------------*/
-.sort h2 {
-	font-size: 18px;
-	line-height: 18px;
-	text-transform: uppercase;
-	font-weight: bold;
-
-	color: #000000;
+.sort {
+	margin: 60px 0 60px 0;
+	padding: 0; 
 }
 
 .sort ul {
@@ -450,11 +702,46 @@ input [type="radio"].visually-hidden {
 	color: #000000;
 }
 
-.sort-list li {
+.sort h2 {
+	display: block;
+	width: 50%;
+	margin: 0 0 0 0;
+	padding: 0;
+	font-size: 18px;
+	line-height: 18px;
+	text-transform: uppercase;
+	font-weight: bold;
+
+	color: #000000;
+}
+
+.sort-list {
 	font-size: 14px;
 	line-height: 18px;
 	text-transform: uppercase;
 	color: #000000;
+}
+
+.sort-columns {
+	display: flex;
+	justify-content: space-between;
+	margin: 0;
+	padding: 0;
+}
+
+.sort-list {
+	display: flex;
+	justify-content: space-between;
+	width: 300px;
+	margin: 0;
+	padding: 0;
+}
+
+.sort-kind {
+	display: flex;
+	justify-content: space-between;
+	margin: 0;
+	padding: 0;
 }
 
 .sort-type,
@@ -462,10 +749,59 @@ input [type="radio"].visually-hidden {
 	opacity: 0.3;
 }
 
+.sort-kind {
+	width: 45px;
+	min-height: 18px;
+}
+
+.sort-down::before {
+	content: "";
+	display: block;
+	width: 12px;
+	height: 11px;
+	background-image: url("../img/icon-down-dir.svg");
+	opacity: 1;
+}
+
+.sort-up-current::before {
+	content: "";
+	display: block;
+	width: 12px;
+	height: 11px;
+	background-image: url("../img/icon-up-dir.svg");
+	opacity: 0.2;
+}
+
 
 /*---------------Стили шаблонов (каталог) ---------------*/
+.catalog-columns {
+	display: flex;
+	width: 1200px;
+	margin: 0 auto;
+	padding: 0;
+}
+
+.templates {
+	width: 780px;
+	margin: 0;
+	padding: 0;
+}
+
 .template-list {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin: 0;
+	margin-bottom: 27px;
+	padding: 0;
 	list-style: none;
+}
+
+.catalog-item	{
+	width: 360px;
+	margin: 0;
+	margin-bottom: 33px;
+	padding: 0;
 }
 
 .template-list h4 {
@@ -510,26 +846,77 @@ input [type="radio"].visually-hidden {
 	text-transform: uppercase;
 }
 
+.catalog-item::before {
+	content: "";
+	display: block;
+	width: 360px;
+	min-height: 40px;
+	background: url(../img/browser.svg);
+	background-repeat: no-repeat;
+	opacity: 0.12;
+}
+
+.catalog-item:hover::before {
+	opacity: 1;
+}
+
+.catalog-item:hover {
+	box-shadow: 0 6px 15px 0 rgba(0, 1, 1, 0.25);
+}
 
 /*---------------Ссылки на страницы (каталог) ---------------*/
 .pagination-list {
-	list-style: none;
-	font-size: 14px;
+	display: flex;
+	font-size: 16px;
 	line-height: 18px;
 	color: #000000;
+	text-transform: uppercase
+	margin: 0;
+	margin-bottom: 60px;
+	padding: 0;
+	list-style: none;
+}
+
+.pagination-item a {
+	display: block;
+	padding: 17px 22px;
+	margin-right: 10px;
+	background-color: #eeeeee;
+	border-radius: 5px;
+	color: #000000;
 	text-transform: uppercase;
+	font-weight: bold;
 }
 
-.pagination-item-current {
+.pagination-item-current a {
+	display: block;
+	padding: 12px 17px;
+	margin-right: 10px;
 	background-color: #ffffff;
+	border: 5px #eeeeee solid;
+	border-radius: 5px;
+	color: #000000;
+	text-transform: uppercase;
+	font-weight: bold;
 }
 
-.pagination-item a:hover,
-.pagination-item a:focus {
+.pagination-item-next a {
+	display: block;
+	padding: 17px 80px;
+	margin-right: 10px;
+	background-color: #eeeeee;
+	border-radius: 5px;
+	color: #000000;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+.pagination a:hover,
+.pagination a:focus {
 	background-color: #dfdfdf;
 }
 
-.pagination-item a:active {
+.pagination a:active {
 	color: #000000;
 	opacity: 0.3;
 	background-color: #d5d5d5;
@@ -548,8 +935,9 @@ input [type="radio"].visually-hidden {
 /*ГЛАВНАЯ*/
 /*---------------Сетка для навигации---------------*/
 .main-header {
+	width: 1200px;
 	background-color: #eeeeee;	
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
 }
 
@@ -862,6 +1250,9 @@ input [type="radio"].visually-hidden {
 }
 
 
+
+
+
 /*Каталог*/
 /*---------------Сетка для шапки---------------*/
 .page-title {
@@ -870,79 +1261,3 @@ input [type="radio"].visually-hidden {
 	padding: 0;
 	padding-bottom: 116px;
 }
-
-
-/*---------------Сетка для фильтров---------------*/
-.catalog-columns {
-	display: flex;
-	justify-content: space-between;
-	width: 1200px;
-	margin: 0 auto;
-	padding: 0;
-}
-
-.filters {
-	width: 33.3333%;  
-	outline: 3px solid yellow;
-}
-
-.templates {
-	width: 66.6666%;
-	outline: 3px solid blue;
-}
-
-.sort-columns h2 {
-	margin: 0;
-	padding: 0;
-	outline: 3px solid black;	
-}
-
-.sort-columns {
-	display: flex;
-	margin: 0;
-	padding: 0;
-	outline: 5px solid red;
-}
-
-.sort-list {
-	display: flex;
-	margin: 0;
-	padding: 0;
-	outline: 3px solid purple;
-}
-
-.sort-kind {
-	display: flex;
-	margin: 0;
-	padding: 0;
-	outline: 3px solid yellow;
-}
-
-.template-list {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	margin: 0;
-	margin-bottom: 27px;
-	padding: 0;
-	list-style: none;
-}
-
-.catalog-item	{
-	width: 360px;
-	margin: 0;
-	margin-bottom: 33px;
-	padding: 0;
-	outline: 3px solid orange;
-}
-
-.pagination-list {
-	display: flex;
-	list-style: none;
-	margin: 0;
-	margin-bottom: 60px;
-	padding: 0;
-	outline: 3px solid black;
-}
-
-
