--- a/css/style.css
+++ b/css/style.css
@@ -40,14 +40,14 @@ input [type="radio"].visually-hidden {
 .button {
 	display: inline-block;
 	margin-right: 16px;
-	padding: 17px 40px;
+	padding: 16px 40px;
 
 	font-size: 16px;
 	line-height: 18px;
 	text-align: center;
 	font-weight: normal;
 	color: #ffffff;
-	vertical-align: center;
+	vertical-align: middle;
 	text-transform: uppercase;
 	border-radius: 5px;
 
@@ -69,10 +69,10 @@ input [type="radio"].visually-hidden {
 }
 
 .main-header-logo {
-	width: 160px;
+	width: 200px;
 	height: 65px;
 	margin: 0;
-	padding: 48px 200px 20px 20px;
+	padding: 49px 20px 18px 20px;
 }
 
 .main-header-logo img:focus,
@@ -99,16 +99,15 @@ input [type="radio"].visually-hidden {
 
 .site-navigation {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: center;
 	flex-wrap: wrap;
 	margin: 0;
-	padding: 0;
+	padding: 0 20px;
 }
 
 .site-navigation li {
-	padding: 0;
-	padding-top: 73px;
-	padding-right: 45px;
+	padding: 0 23px;
+	padding-top: 75px;
 }
 
 .site-navigation,
@@ -124,10 +123,11 @@ input [type="radio"].visually-hidden {
 
 .basket-link {
 	display: flex;
-	max-width: 130px;
+	justify-content: flex-end;
+	width: 200px;
 	margin: 0;
-	padding: 0;
-	padding-top: 83px;
+	padding: 0 20px;
+	padding-top: 75px;
 }
 
 .basket-link .basket {
@@ -139,8 +139,8 @@ input [type="radio"].visually-hidden {
 	content: "";
 
 	position: absolute;
-	top: 1px;
-	left: 20px;
+	top: 2px;
+	left: 5px;
 
 	width: 16px;
 	height: 16px;
@@ -180,19 +180,27 @@ input [type="radio"].visually-hidden {
 	flex-direction: row-reverse;
 	justify-content: flex-end;
 	width: 1200px;
+	min-height: 412px;
 	padding: 0;
 	margin: 0 auto;
 }
 
 .slider-left {
-	width: 44%;
+	width: 50%;
 	margin: 0;
-	padding: 0;
+	padding: 60px 20px 0 20px;
 }
 
 .slider-img {
+	width: 50%;
 	margin: 0;
 	padding: 0;
+	line-height: 0;
+}
+
+.slider-img img {
+	max-width: none;
+	margin-left: -169px;
 }
 
 .sliders-list {
@@ -207,37 +215,35 @@ input [type="radio"].visually-hidden {
 .sliders-list h3 {
 	font-size: 55px;
 	line-height: 55px;
-	padding: 0;
-	padding-top: 65px;
-	margin: 0;
+	margin: 0 00 26px 0;
+	padding:  0;
 }
 
 .slider-left p {
 	font-size: 16px;
 	line-height: 24px;
 	width: 460px;
-	margin: 0;
-	padding: 28px 0 42px 0; 
+	margin: 0px 0 40px 0; 
+	padding: 0;
 }
 
 .sliders-list a {
 	text-decoration: none;
 	font-size: 16px;
 	line-height: 18px;
-	color: #ffffff
+	color: #ffffff;
 	text-transform: uppercase;
 	background-color: #fb565a;
 }
 
 .button-slider {
 	display: inline-block;
-	padding: 17px 55px;
+	min-width: 190px;
+	padding: 16px 25px;
 } 
 
 .sliders-list a:hover,
-.sliders-list a:focus,
-.basket-link a:focus,
-.basket-link a:hover {
+.sliders-list a:focus {
 	background-color: #e74246;
 }
 
@@ -252,12 +258,17 @@ input [type="radio"].visually-hidden {
 
 /*--------------- Услуги-СТИЛИ ---------------*/
 .services-list {
+	position: relative;
 	display: flex;
 	width: 1200px;
 	margin: 0 auto;
 	padding: 0;
-	border-bottom: 2px solid #e1e1e1;
 	list-style: none;
+}
+
+.services-list img {
+	margin: 0 0 18px 0;
+	padding: 0;
 }
 
 .services-list h3 {
@@ -265,7 +276,9 @@ input [type="radio"].visually-hidden {
 	line-height: 30px;
 	font-weight: bold;
 	text-transform: uppercase;
-}
+	margin: 0 0 16px 0;
+	padding: 0;
+} 
 
 .services-list a {
 	text-decoration: none;
@@ -277,25 +290,18 @@ input [type="radio"].visually-hidden {
 }
 
 .service-item {
-	width: 33%;
+	width: 33.3333%;
 	margin: 0;
-	margin-right: 100px;
 	margin-bottom: 80px;
-	padding: 0;
-	border: 3px solid purple;
+	padding: 0 20px;
 }
 
 .service-item p {
 	width: 245px;
-	margin: 0;
+	margin: 0 0 32px 0;
 	padding: 0;
-	padding-bottom: 35px;
 }
 
-.service-item h3 {
-	margin: 0;
-	padding: 26px 0;
-}
 
 .web-site a {
 	background-color: #fb565a;
@@ -342,6 +348,15 @@ input [type="radio"].visually-hidden {
 	box-shadow: 0 3px inset;
 }
 
+.services-list::after {
+	content: "";
+	position: absolute;
+	width: 1160px;
+	height: 2px;
+	top: 427px;
+	left: 20px;
+	background-color: #e1e1e1;
+}
 
 
 /*--------------- О студии-СТИЛИ ---------------*/
@@ -351,69 +366,75 @@ input [type="radio"].visually-hidden {
 	width: 1200px;
 	margin: 0 auto;
 	padding: 0;
-	border-bottom: 2px solid #e1e1e1;
 }
 
 
 /*--------------- О студии-СТИЛИ-левая сторона ---------------*/
 .about {
-	width: 58.3333%;
-	margin: 80px 0 75px 0;
-	padding: 0;
-	outline: 3px solid orange;
+	width: 800px;
+	margin: 0;
+	padding: 76px 20px 73px 20px;
 }
 
 .slogan {
+	width: 700px;
+	margin: 0;
+	padding: 0;
 	color: #000000;
 	font-size: 45px;
 	line-height: 45px;
 }
 
 .slogan2 {
-	margin: 0;
-	padding: 38px 0 48px 0;
+	width: 680px;
+	margin: 33px 0 39px 0;
+	padding: 0;
 }
 
 .about h4 {
-	margin: 0;
+	margin: 0 0 24px 0;
 	padding: 0;
-	padding-bottom: 35px;
 	color: #000000;
 	text-transform: uppercase;
 }
 
-.orders li {
+.about ul {
 	margin: 0;
-	padding: 0;
-	padding-bottom: 35px;
-}
-
-.orders li:nth-child(3) {
-	margin: 0;
-	padding: 0;
+	padding-bottom: 73px;
 }
 
 .orders li {
 	display: block;
 	position: relative;
+	margin: 0 0 0 -4px;
+	padding: 0 0 24px 0;
+}
+
+.orders li:nth-child(2) {
+	margin: 0 0 0 -4px;
+	padding: 0 0 24px 0;
+}
+
+.orders li:nth-child(3) {
+	margin: 0 0 0 -4px;
+	padding: 0;
 }
 
 .orders li::before {
 	position: absolute;
-	left:-40px;
+	left:-37px;
 	display: block;
 	content: "\2014";
-	font-size: 40px;
+	font-size: 39px;
 	color: #fb565a;
 }
 
 
 /*--------------- О студии-СТИЛИ-правая сторона ---------------*/
 .block2004 {
-	width: 33.3333%;
-	margin: 40px 0 75px 0;
-	padding: 0;
-	outline: 3px solid blue;
+	width: 400px;
+	margin: 26px 0 0 40px;
+	padding: 0 20px;
 }
 
 .statistics {
@@ -421,8 +442,8 @@ input [type="radio"].visually-hidden {
 }
 
 .block2004 h4 {
-	margin: 0;
-	padding: 41px 0 45px 0;
+	margin: 29px 0 0 0;
+	padding: 0;
 	text-align: center;
 	text-transform: uppercase;
 	font-weight: bold;
@@ -430,9 +451,20 @@ input [type="radio"].visually-hidden {
 
 .block2004 .statistics {
 	display: flex;
-	margin: 0;
+	margin: 58px 0 0 0;
 	padding: 0;
 }
+
+.statistics li:nth-child(1) {	
+	margin: 0 25px 0 0;
+	padding: 0; 
+}
+
+.statistics li:nth-child(2) {	
+	margin: 0 24px 0 0;
+	padding: 0; 
+}
+
 
 .statistics .number {
 	font-size: 45px;
@@ -441,14 +473,15 @@ input [type="radio"].visually-hidden {
 }
 
 .statistics .percent {
-	font-size: 20px; 
+	font-size: 27px; 
 	vertical-align: super;
-
-	margin-top: -13px;
-	position: absolute; /* ничего не произошло... */
+	margin: -15px 0 0 0;
+	position: absolute;
 }
 
 .statistics .tagging {
+	margin: 19px 0 0 0;
+	padding: 0;
 	font-size: 16px;
 	line-height: 18px;
 }
@@ -466,17 +499,18 @@ input [type="radio"].visually-hidden {
 .partners-section {
 	width: 1200px;
 	margin: 0 auto;
-	margin-bottom: 80px;
+	margin-bottom: 115px;
 	padding: 0;
-	outline: 3px solid red;
 }
 
 .partners-list {
+	position: relative;
 	display: flex;
 	align-items: center;
 	width: 1200px;
-	margin: 0;
+	margin: -21px 0 0 0;
 	padding: 0;
+	list-style: none;
 }
 
 .partners-list li {
@@ -484,10 +518,6 @@ input [type="radio"].visually-hidden {
 	text-align: center;
 	margin: 0;
 	padding: 0;
-}
-
-.partners-list {
-	list-style: none;
 }
 
 .partners-list a {
@@ -526,6 +556,26 @@ input [type="radio"].visually-hidden {
 	display: none;
 }
 
+.partners-list::before {
+	content: "";
+	position: absolute;
+	width: 1160px;
+	height: 2px;
+	top: -52px;
+	left: 20px;
+	background-color: #e1e1e1;
+}
+
+.partners-list::after {
+	content: "";
+	position: absolute;
+	width: 1160px;
+	height: 2px;
+	top: 130px;
+	left: 20px;
+	background-color: #e1e1e1;
+}
+
 
 
 /*--------------- Футер-СТИЛИ ---------------*/
@@ -539,27 +589,29 @@ input [type="radio"].visually-hidden {
 	margin-left: -500px;
 	margin-right: -500px;
 	text-align: center;
-	outline: 3px solid red;
 }
 
 .contacts {
 	position: absolute;
 	width: 219px;
 	height: 308px;
-	margin-top: -400px;
+	margin-left: 21px;
+	margin-top: -370px;
 	padding: 0 50px;
 	background-color: #ffffff;
 }
 
 .contacts h4 {
-	margin: 50px 0 30px 0;
-	padding: 0;
+	margin: 0 0 0 0;
+	padding: 50px 0 23px 0;
 	font-size: 18px;
 	line-height: 30px;
 	font-weight: bold;
 	text-transform: uppercase;
 }
 .contacts p {
+	margin: 0; 
+	padding: 0 0 8px 0;
 	font-size: 16px;
 	line-height: 18px;
 	color: #61686c;
@@ -567,20 +619,20 @@ input [type="radio"].visually-hidden {
 
 .contacts p:last-of-type {
 	margin: 0;
-	padding: 10px 0 35px 0;
+	padding: 10px 0 37px 0;
 }
 
 .button-letter {
 	display: block;
-	padding: 17px 45px;
+	padding: 16px 25px;
 	font-size: 16px;
 	line-height: 18px;
 	text-align: center;
 	font-weight: normal;
 	color: #ffffff;
-	vertical-align: center;
+	vertical-align: middle ;
 	text-transform: uppercase;
-	border-radius: 5px;
+	border-radius: 3px;
 	background-color: #fb565a;
 	border: none;  /* неправильно отображается */
 }
@@ -600,18 +652,22 @@ input [type="radio"].visually-hidden {
 /*--------------- Футер-Подвал-СТИЛИ ---------------*/
 .footer-colums {
 	display: flex;
-	width: 1200px;  /*надо ли тут ширину дублировать!? */
-	margin: 69px 0 0 0;
+	width: 1200px;  
+	margin: 62px 0 0 0;
 	padding: 0;
-	outline: 3px solid blue;	
+}
+
+.footer-social {
+	margin: 0;
+	padding: 0;
+	width: 300px;
 }
 
 .social-type {
 	display: flex;
 	justify-content: space-between;
-	width: 260px;
-	margin: 0px 140px 0 0;
-	padding: 0;
+	margin: 0;
+	padding: 0 20px;
 	list-style: none;
 }
 
@@ -641,40 +697,35 @@ input [type="radio"].visually-hidden {
 }
 
 .footer-discount {
-	width: 66%;
+	width: 900px;
 	margin: 0;
 	padding: 0;
 }
 
 .footer-discount b {
 	display: block;
-	padding: 9px 0 15px 0;
+	margin: 0 0 0 120px;
+	padding: 6px 0 0 0;
 	font-size: 36px;
 	line-height: 36px;
 	font-weight: bold;
 }
 
 .footer-discount p {
-	margin: 0;
-	padding: 0;
+	margin: 10px 0 0 0;
+	padding: 0 0 0 120px;
 	font-size: 16px;
-	list-style: 22px;
+	line-height: 22px;
 	color: #444444;
 }
-
-
-
-
-
 
 
 /*--------------- Каталог-СТИЛИ ---------------*/
 .page-title {
 	margin: 0 -2000px;
-	padding: 65px 0 115px 0;
+	padding: 60px 20px 106px 20px;
 	font-size: 55px;
 	line-height: 55px;
-
 	background-color: #eeeeee;
 	text-align: center;
 }
@@ -683,95 +734,28 @@ input [type="radio"].visually-hidden {
 
 /*--------------- Фильтры-СТИЛИ ---------------*/
 .filters {
-	width: 300px;
-	padding: 0;
-	margin: 0 120px 0 0;
-}
-
-/*--------------- Фильтр-Сетка-СТИЛИ ---------------*/
-.filter-item-grid {
-	margin: 0 0 50px 0;
-	padding: 0;
-	border: none;
-}
-
-.filter-item-grid legend {
-	margin: 0 0 20px 0;
-	padding: 0;
-	font-size: 18px;
-	line-height: 30px;
-	text-transform: uppercase;
-	font-weight: bold;
-}
-
-.filter-item-grid ul {
-	font-size: 16px;
-	line-height: 20px;
-	list-style: none;
+	width: 360px;
 	margin: 0;
-	padding: 0;
-	color: #dfdfdf;
-}
-
-.option-grid {
-	margin-bottom: 15px;
-	padding-left: 35px; 
-}
-
-.option-grid label {
-	position: relative;
-	display: block;
-	cursor: pointer;
-	user-select: none;
-}
-
-.filter-input-radio + label::before {
-	content: "";
-
-	position: absolute;
-	left: -35px;
-	top: -2px;
-
-	width: 27px;
-	height: 27px;
-
-	background-image: url("../img/radio-off.svg");
-	background-repeat: no-repeat;
-	background-position: 0 0;
-	color: #dfdfdf;
-	opacity: 0.4;
-}
-
-.filter-input-radio:checked + label::after {
-	content: "";
-
-	position: absolute;
-	left: -35px;
-	top: -2px;
-
-	width: 27px;
-	height: 27px;
-
-	background-image: url("../img/radio-on.svg");
-	background-repeat: no-repeat;
-	background-position: 0 0;
-	color: #dfdfdf;
-	opacity: 0.4;
+	padding: 0 20px;
 }
 
 
 
 /*--------------- Фильтр-Стоимость-СТИЛИ ---------------*/
 .filter-item-cost {
-	margin: 60px 0 60px 0;
+	margin: 57px 0 56px 0;
 	padding: 0;
 
 	border: none;
 }
 
+.filter-item-cost legend {
+	letter-spacing: 1px;
+}
+
 .range-filter {
 	width: 260px;
-	margin-top: 49px;
+	margin-top: 48px;
 }
 
 .filter-item-cost legend {
@@ -783,13 +767,9 @@ input [type="radio"].visually-hidden {
 
 .range-controls {
 	height: 41px;
-	margin-bottom: 15px;
-	padding-top: 39px;
-	padding-right: 20px;
-	padding-left: 20px;
-
+	margin: 0 0 17px 0;
+	padding: 39px 20px 0 20px;
 	background-color: #f1f1f1;
-  
 	border-radius: 5px;
 }
 
@@ -865,6 +845,84 @@ input [type="radio"].visually-hidden {
 }
 
 
+
+
+
+/*--------------- Фильтр-Сетка-СТИЛИ ---------------*/
+.filter-item-grid {
+	margin: 0 0 25px 0;
+	padding: 0;
+	border: none;
+}
+
+.filter-item-grid legend {
+	margin: 0 0 15px 0;
+	padding: 0;
+	font-size: 18px;
+	line-height: 30px;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+.filter-item-grid ul {
+	font-size: 16px;
+	line-height: 20px;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	color: #dfdfdf;
+}
+
+.option-grid {
+	margin-bottom: 20px;
+	padding-left: 36px; 
+}
+
+.option-grid label {
+	position: relative;
+	display: block;
+	cursor: pointer;
+	user-select: none;
+}
+
+.filter-input-radio + label::before {
+	content: "";
+
+	position: absolute;
+	left: -35px;
+	top: -2px;
+
+	width: 27px;
+	height: 27px;
+
+	background-image: url("../img/radio-off.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	color: #dfdfdf;
+	opacity: 0.4;
+}
+
+.filter-input-radio:checked + label::after {
+	content: "";
+
+	position: absolute;
+	left: -35px;
+	top: -2px;
+
+	width: 27px;
+	height: 27px;
+
+	background-image: url("../img/radio-on.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	color: #dfdfdf;
+	opacity: 0.4;
+}
+
+
+
+
+
 /*--------------- Фильтр-Особенности-СТИЛИ ---------------*/
 .filter-item-features {
 	margin: 0 0 30px 0;
@@ -873,7 +931,7 @@ input [type="radio"].visually-hidden {
 }
 
 .filter-item-features legend {
-	margin: 0 0 20px 0;
+	margin: 0 0 16px 0;
 	padding: 0;
 	font-size: 18px;
 	line-height: 30px;
@@ -900,7 +958,7 @@ input [type="radio"].visually-hidden {
 }
 
 .option-features {
-	margin-bottom: 18px;
+	margin-bottom: 20px;
 	padding-left: 35px; 
 }
 
@@ -1100,9 +1158,9 @@ input [type="radio"].visually-hidden {
 }
 
 .templates {
-	width: 780px;
+	width: 760px;
 	margin: 0;
-	padding: 0;
+	padding: 0 20px;
 }
 
 .template-list {
